pymvpa2 (2.2.0-1) unstable; urgency=low

  * Fresh upstream release:
    - provides tutorial (in -doc package) as ipython notebooks.
      Added ipython-notebook into Suggests

 -- Yaroslav Halchenko <debian@onerussian.com>  Sun, 16 Sep 2012 06:23:51 -0400

pymvpa2 (2.1.0-1) unstable; urgency=low

  * Fresh upstream release
  * debian/control
    - unwrapped Depends/Recommends and sorted
    - moved python-lxml and python-sklearn into Recommends
    - added liblapack-dev into Recommends -- provides liblapack.so
      optionally used by Hyperalignment
  * debian/upstream -- added with a canonical reference

 -- Yaroslav Halchenko <debian@onerussian.com>  Thu, 28 Jun 2012 13:28:19 -0400

pymvpa2 (2.0.1-1) unstable; urgency=low

  * Fresh upstream release
    - all debian/patches were upstreamed
  * debian/control
    - policy boosted to 3.9.3 (no changes)
  * debian/copyright
    - updated for DEP5 v1.0
  * debian/rules
    - added a call to dh_numpy where available for proper NumPy dependencies

 -- Yaroslav Halchenko <debian@onerussian.com>  Tue, 27 Mar 2012 09:47:23 -0400

pymvpa2 (2.0.0-6) unstable; urgency=low

  * Fixed FTBFS due to sphinx API changes braking old copy of autosummary.
    System-wide autosummary should be used now for sphinx >= 1.1.2
    (Closes: #658593). Thanks to Jakub Wilk and Julian Taylor for help
    Patch: up_sphinx_1.1.2_autosummary

 -- Yaroslav Halchenko <debian@onerussian.com>  Tue, 07 Feb 2012 11:16:39 -0500

pymvpa2 (2.0.0-5) unstable; urgency=low

  * Fixed FTBFS due to test failure in test_niftidataset on big-endians.
    Patch: 0001-BF-assure-native-endianness-in-test_assumptions_on_n.patch
  * Fixed oblivious typo of removing system-installed underscore.js
    leading to stall and thus FTBFS on Debian build hosts
  * Run unittests with verbose output for easy troubleshooting of FTBFSs

 -- Yaroslav Halchenko <debian@onerussian.com>  Tue, 27 Dec 2011 16:26:12 -0500

pymvpa2 (2.0.0-4) unstable; urgency=low
