@@ -3,6 +3,8 @@ pymvpa2 (2.2.0-1) unstable; urgency=low
   * Fresh upstream release:
     - provides tutorial (in -doc package) as ipython notebooks.
       Added ipython-notebook into Suggests
+    - all cmdline tools have disambiguating prefix thus are
+      installed now without conflict with pymvpa (0.4.x) package.
 
  -- Yaroslav Halchenko <debian@onerussian.com>  Sun, 16 Sep 2012 06:23:51 -0400
 
